fix: Burger button Z-index

--- a/src/components/home/BurgerMenu.css
+++ b/src/components/home/BurgerMenu.css
@@ -5,7 +5,7 @@
     height: 30px;
     left: 10px;
     top: 10px;
-    z-index: 50;
+    z-index: 50 !important;
   }
   
   /* Color/shape of burger icon bars */
